--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mammoth": "^1.10.0",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
